# genescape-central

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.txt  Makefile  README.md  buildwin.bat  pyproject.toml
.github/workflows/: draft-pdf.yml  python-app.yml  release-builder.yml
docs/: annotate.md  demo.txt  develop.md  gs_tree.md  paper.bib  paper.md  tree.md
shine/: core.py
shine/libs/: style.css
shine/libs/js/: main.js
src/genescape/: __about__.py  __init__.py  annot.py  bottle.py  build.py  core.py  dist.py  exe.py  filter.py  graph.py  gs_annotate.py  gs_build.py  gs_filter.py  gs_graph.py  gs_index.py  gs_olap.py  gs_tree.py  gui.py  icons.py  main.py  nexus.py  obo.py  olap.py  resources.py  server.py  subtree.py  tree.py  utils.py  web.py
src/genescape/data/: config.toml  genelist.txt  goids-label.csv  goids.txt  gprofiler-demo.csv  test_enrichr.txt  test_genes.txt  test_goids.txt  test_input.csv  test_input.json
src/genescape/data/css/: genescape.css  style.css
src/genescape/data/js/: genescape.js  main.js
src/genescape/data/web/: draw.html  index.html
src/genescape/data/web/static/: genescape.css  genescape.js
src/genescape/plugins/: default.py  enrichr.py  gprofiler.py  reader.py
src/genescape/shiny/: README.md  app.py  requirements.txt
src/genescape/shiny/tree/: README.md  app.py  app_new.py
src/genescape/shiny/tree/rsconnect-python/: shiny.json
src/genescape/shiny/tree/static/: README.txt
src/genescape/web/: index.html
src/genescape/web/htmx/: dot.html  draw.html  image.html  test.html
src/genescape/web/static/: genescape.css  genescape.js  mini-dark.css  mini-nord.css
src/genescape/web/static/tmp/: README.md
src/scripts/: genomes.py
src/share/: windows.bat
src/shine/: core.py
src/shine/libs/js/: viz-standalone.js
test/: Makefile  __init__.py  test_genescape.py
test/files/: hs_genes1.annot.csv  hs_genes1.annot.json  hs_genes1.csv  hs_genes1.dot  hs_genes1.tree.dot  hs_genes2.annot.csv  hs_genes2.annot.json  hs_genes2.csv  hs_genes2.dot  hs_genes2.tree.dot  hs_genes2.txt  hs_goids1.txt  mm_genes1.txt  only-hs.txt  out_test_genes_hs_1.csv  out_test_genes_hs_1.dot  out_test_genes_hs_1_signal.csv  out_test_genes_hs_1_signal.dot  out_test_genes_hs_2.csv  out_test_genes_hs_2.dot  out_test_goids.csv  out_test_goids.dot  test_genes.csv  test_genes_hs_1.txt  test_genes_mm_1.txt  test_goids.txt
