[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genescape"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Istvan Albert", email = "istvan.albert@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "toml" ,
  "networkx",
  "pydot",
]

[project.urls]
Documentation = "https://github.com/ialbert/genescape-central#readme"
Issues = "https://github.com/ialbert/genescape-central/issues"
Source = "https://github.com/ialbert/genescape-central"

[project.scripts]
"genescape" = "genescape.main:cli"

[tool.hatch.metadata]
include = [
  'src/genescape/data/*',
]

[tool.hatch.build.targets.sdist]
exclude = [
  ".git",
  ".idea",
  ".DS_Store",
  "tmp",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/genescape",
]

[tool.hatch.build.targets.scripts]
packages = [
  "src/genescape",
]

[tool.hatch.version]
path = "src/genescape/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:test}"
test-cov = "coverage run -m pytest {args:test}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/genescape tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = [ 'py310' ]
line-length = 120
skip-string-normalization = true
exclude = '''
src/genescape/bottle\.py
'''

[tool.ruff]
target-version = 'py310'
line-length = 120
exclude = [
    # This a vendored third-party library.
    "src/genescape/bottle.py",
]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes, dict calls
  "B027", "C408",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003", "C417", "FBT002",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",

  # Pet peevees
  "Q000", "C402",  "F401", "E401",  "T201", "E501", "S311", "RUF005", "S603",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["genescape"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["genescape", "tests"]
branch = true
parallel = true
omit = [
  "src/genescape/__about__.py",
]

[tool.coverage.paths]
genescape = ["src/genescape", "*/genescape/src/genescape"]
tests = ["tests", "*/genescape/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
